<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/normal_margin">

    <TextView
        android:id="@+id/tvSuggestionsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feedback_suggestions"
        android:textSize="@dimen/normal_text"
        android:textColor="@android:color/black"/>

    <EditText
        android:id="@+id/etMail_feedback_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvSuggestionsTitle"
        android:textSize="@dimen/medium_text"
        android:inputType="textMultiLine"
        android:textColor="@android:color/black"
        android:minLines="6"
        android:maxLines="10"
        android:scrollbars="vertical"
        android:gravity="top|start"
        android:padding="@dimen/small_margin"
        android:background="@drawable/shape"
        android:layout_marginTop="@dimen/normal_margin">
    </EditText>

    <Button
        android:id="@+id/btn_feedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etMail_feedback_message"
        android:text="@string/send_feedback"
        android:textAllCaps="false"
        android:textSize="@dimen/large_text"
        android:background="@drawable/pink_button_on_select"
        android:textColor="@android:color/white"
        android:layout_marginTop="@dimen/medium_margin"/>

    <TextView
        android:id="@+id/tvVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/adView"
        android:textColor="@android:color/black"
        android:textSize="@dimen/large_text"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/normal_margin"/>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true">
    </com.google.android.gms.ads.AdView>

</RelativeLayout>